--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1066,7 +1066,7 @@ html body #main .wrapper #shop .books .book {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 25px 24px;
+  padding: 35px 24px;
   margin: 14px;
   overflow: hidden;
   -webkit-transition: .32s ease-in-out;
@@ -1076,7 +1076,7 @@ html body #main .wrapper #shop .books .book {
 }
 
 html body #main .wrapper #shop .books .book:hover .cartFav {
-  right: 4%;
+  top: 0px;
   opacity: 1;
 }
 
@@ -1133,18 +1133,14 @@ html body #main .wrapper #shop .books .book p.newPrice {
 
 html body #main .wrapper #shop .books .book .cartFav {
   position: absolute;
-  right: -14%;
+  left: 55%;
   opacity: 0;
-  top: 40%;
+  top: -10%;
   -webkit-transition: .32s ease-in-out;
   transition: .32s ease-in-out;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -1156,6 +1152,7 @@ html body #main .wrapper #shop .books .book .cartFav {
 html body #main .wrapper #shop .books .book .cartFav button {
   font-size: 1.6rem;
   color: #6138df;
+  margin: 0 6px;
   background-color: transparent;
   -webkit-transition: .23s ease-in-out;
   transition: .23s ease-in-out;
@@ -2005,6 +2002,10 @@ html body .popupCartFav .popup-content .cart .cartFooter {
           align-items: center;
 }
 
+html body .popupCartFav .popup-content .cart .cartFooter p {
+  display: none;
+}
+
 html body .popupCartFav .popup-content .cart .cartFooter p span {
   color: #06BCC1;
 }
@@ -2363,6 +2364,76 @@ html body .buyFromCartMessage .content button.closePopupMessage {
 
 html body .buyFromCartMessage .content button.closePopupMessage:hover {
   color: #06BCC1;
+}
+
+html body .addToCartMessagePopup {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  background-color: rgba(97, 56, 223, 0.3);
+  z-index: 1000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: none;
+  color: #fefefe;
+}
+
+html body .addToCartMessagePopup.open {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+html body .addToCartMessagePopup .content {
+  background-color: #6138df;
+  position: relative;
+  width: 550px;
+  padding: 20px;
+  height: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 10px;
+}
+
+html body .addToCartMessagePopup .content h2 {
+  font-size: 1.8rem;
+}
+
+html body .addToCartMessagePopup .content button {
+  font-size: 2rem;
+  position: absolute;
+  top: 1%;
+  right: 3%;
+  color: #06BCC1;
+  background-color: transparent;
+  -webkit-transition: .23s ease-in-out;
+  transition: .23s ease-in-out;
+}
+
+html body .addToCartMessagePopup .content button:hover {
+  color: #6138df;
 }
 
 ::-webkit-scrollbar {
