--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,7 @@ $black: #2F2D2E;
 }
 html{
     body{
+        // position: relative;
         font-family: 'Work Sans', sans-serif;
         background-color: $white;
         color: $purple;
@@ -686,13 +687,13 @@ html{
                         height: 435px;
                         border-radius: 15px;
                         @include flexcol();
-                        padding: 25px 24px;
+                        padding: 35px 24px;
                         margin: 14px;
                         overflow: hidden;
                         transition: .32s ease-in-out;
                         animation: fadeIn 1.2s;
                         &:hover .cartFav{
-                            right: 4%;
+                            top: 0px;
                             opacity: 1;
                         }
                         &:hover{
@@ -734,14 +735,15 @@ html{
                         }
                         .cartFav{
                             position: absolute;
-                            right: -14%;
+                            left:55%;
                             opacity: 0;
-                            top: 40%;
+                            top: -10%;
                             transition: .32s ease-in-out;
-                            @include flexcol();
+                            @include flexbox();
                             button{
                                 font-size: 1.6rem;
                                 color: $purple;
+                                margin: 0 6px;
                                 background-color:transparent;
                                 @include transition();
                                 &:hover{
@@ -1270,6 +1272,7 @@ html{
                     .cartFooter{
                         @include flexcol();
                         p{
+                            display: none;
                             span{
                                 color: $blue;
                             }
@@ -1493,6 +1496,47 @@ html{
                     @include transition();
                     &:hover{
                         color: $blue;
+                    }
+                }
+            }
+        }
+        .addToCartMessagePopup{
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            position: fixed;
+            background-color: rgba(97, 56, 223,.3);
+            z-index: 1000;
+            @include flexbox();
+            justify-content: center;
+            display: none;
+            color: $white;
+            &.open{
+                display: flex;
+            }
+            .content{
+                background-color: $purple;
+                position: relative;
+                width: 550px;
+                padding: 20px;
+                height: 300px;
+                @include flexbox();
+                justify-content: center;
+                border-radius: 10px;
+                h2{
+                    font-size: 1.8rem;
+                }
+                button{
+                    font-size: 2rem;
+                    position: absolute;
+                    top:1%;
+                    right:3%;
+                    color: $blue;
+                    background-color: transparent;
+                    @include transition();
+                    &:hover{
+                        color:$purple;
                     }
                 }
             }
