--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -2002,6 +2002,10 @@ html body .popupCartFav .popup-content .cart .cartFooter {
           align-items: center;
 }
 
+html body .popupCartFav .popup-content .cart .cartFooter p {
+  display: none;
+}
+
 html body .popupCartFav .popup-content .cart .cartFooter p span {
   color: #06BCC1;
 }
@@ -2362,7 +2366,7 @@ html body .buyFromCartMessage .content button.closePopupMessage:hover {
   color: #06BCC1;
 }
 
-html body .addToCartMessagePopup {
+html body .addToCartMessagePopup, html body .ajaxErrorMessage {
   width: 100%;
   height: 100%;
   top: 0;
@@ -2386,13 +2390,13 @@ html body .addToCartMessagePopup {
   color: #fefefe;
 }
 
-html body .addToCartMessagePopup.open {
+html body .addToCartMessagePopup.open, html body .ajaxErrorMessage.open {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-html body .addToCartMessagePopup .content {
+html body .addToCartMessagePopup .content, html body .ajaxErrorMessage .content {
   background-color: #6138df;
   position: relative;
   width: 550px;
@@ -2413,11 +2417,11 @@ html body .addToCartMessagePopup .content {
   border-radius: 10px;
 }
 
-html body .addToCartMessagePopup .content h2 {
+html body .addToCartMessagePopup .content h2, html body .ajaxErrorMessage .content h2 {
   font-size: 1.8rem;
 }
 
-html body .addToCartMessagePopup .content button {
+html body .addToCartMessagePopup .content button, html body .ajaxErrorMessage .content button {
   font-size: 2rem;
   position: absolute;
   top: 1%;
@@ -2428,7 +2432,7 @@ html body .addToCartMessagePopup .content button {
   transition: .23s ease-in-out;
 }
 
-html body .addToCartMessagePopup .content button:hover {
+html body .addToCartMessagePopup .content button:hover, html body .ajaxErrorMessage .content button:hover {
   color: #6138df;
 }
 
