--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1500,7 +1500,7 @@ html{
                 }
             }
         }
-        .addToCartMessagePopup{
+        .addToCartMessagePopup, .ajaxErrorMessage{
             width: 100%;
             height: 100%;
             top: 0;
